--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "my-react-project",
+  "name": "conway-game-of-life",
   "version": "0.0.0",
+  "homepage": "https://rogue-gamer-ryt.github.io/ConwayGameOfLife/",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "tsc && vite build",
     "serve": "vite preview"
@@ -16,6 +19,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "gh-pages": "^3.2.3",
     "typescript": "^4.3.2",
     "vite": "^2.5.4"
   }
