--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "bulma": "^0.9.3",
     "immer": "^9.0.12",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-feather": "^2.0.9"
   },
   "devDependencies": {
     "@types/node": "^16.9.1",
